[package]
name = "demo-things"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
uuid = { version = "1.1.1", features = ["v4", "serde"] }
wot-td = "0.2.0"
axum = "0.5.6"
tokio = { version = "1.18.2", features = ["macros", "time"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
tracing = "0.1.34"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["rc", "derive"] }
bytes = "1.1.0"
time = { version = "0.3.9", features = ["serde", "serde-well-known"] }
serde_with = "1.14.0"
http-api-problem = "0.52.0"
wot-serve = "0.2.0"
tokio-stream = { version = "0.1.9", features = ["sync"] }
clap = { version = "4.0.22", features = ["derive"] }

[features]
