[package]
name = "demo-things"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
bytes = "1.1.0"
clap = { version = "4.0.22", features = ["derive"] }
futures-concurrency = "7.1.0"
futures-util = "0.3.25"
http-api-problem = "0.52.0"
humantime-serde = "1.1.1"
once_cell = "1.12.0"
pin-project-lite = "0.2.9"
serde = { version = "1.0.137", features = ["rc", "derive"] }
serde_json = "1.0"
serde_with = "1.14.0"
signal-hook = { version = "0.3.14", default-features = false }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
time = { version = "0.3.9", features = ["serde", "serde-well-known"] }
tokio = { version = "1.18.2", features = ["macros", "time", "fs"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
toml = "0.5.10"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
uuid = { version = "1.1.1", features = ["v4", "serde"] }
wot-serve = "0.2.0"
wot-td = "0.2.0"
